@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.144 2005/01/11 15:22:41 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.145 2005/01/11 22:49:44 wolf31o2 Exp $
+
+  11 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript-support/kmerge.sh:
+  Added ccache support to genkernel call in livecd-stage2.
 
   11 Jan 2005; John Davis <zhen@gentoo.org>
   targets/netboot/netboot-busybox.sh, targets/netboot/netboot-combine.sh,
